Fix scrollbar colours in IE.  Wishing I'd never got involved in browser specific CSS...

--- a/css/eden.css
+++ b/css/eden.css
@@ -10,8 +10,13 @@ body {
 	width: 400%;
 	min-height: 100%;
 	/* Internet Explorer*/
-	scrollbar-face-color: rgba(255, 255, 255, 0.2);
-	scrollbar-track-color: transparent;
+	scrollbar-face-color: rgb(84, 106, 111);
+	scrollbar-track-color: #29454B;
+}
+
+* {
+	scrollbar-face-color: #BBBBBB;
+	scrollbar-track-color: #EEEEEE;	
 }
 
 body::-webkit-scrollbar {
